<resources>
    <string name="app_name">WifiClock</string>
    <string name="main">首页</string>
    <string name="getWiftList">获取Wifi列表</string>
    <string name="CloseWifi">关闭Wifi</string>
    <string name="OpenWifi">打开Wifi</string>
    <string name="ConnectWithWpa">连接WIFI</string>
    <string name="loading">正在加载中..</string>
    <string name="wifi_detail">Wifi详情</string>
    <string name="ConnectDistance">获取当前Wifi的距离</string>
    <string name="OpenGPS">打开GPS</string>
    <string name="WifiInfoTV">WiFi信息</string>
    <string name="SetWifiListener">设置WIFI状态监听</string>
    <string name="ClockWork">打卡上班</string>
    <string name="AutoClock">自动打卡</string>
    <string name="ChooseWorkPoint">请选择上班地点</string>
    <string name="login">登录</string>
    <string name="tip_account">请输入账号</string>
    <string name="tip_psw">请输入您的密码</string>
    <string name="app_name_introduce">打卡大师</string>
    <string name="app_right">Copyright © 1998 - 2018 xiaomakeji.com All Rights Reserved</string>
    <string name="nullstring" />
    <string name="clockrecord">打卡记录</string>
    <string name="exit">退出登录</string>
    <string name="usercenter">个人中心</string>
    <string name="feedback">意见反馈</string>
    <string name="star">点个赞吧</string>
    <string name="register">注册</string>
    <string name="toMain">去首页</string>
    <string name="tip_phone">请输入手机号码</string>
    <string name="tip_email">请输入邮箱</string>
    <string name="tip_psw2">请确认您的密码</string>
    <string name="err_psw_common">两次输入密码不同</string>
    <string name="getBackPsw">找回密码</string>
    <string name="loginBycaptcha">手机验证码登录</string>
    <string name="edCapcha">请输入验证码</string>
    <string name="getCode">获取验证码</string>
    <string name="edPhone">请输入手机号码</string>
    <string name="err_captcha">手机号码或验证码不能为空</string>
</resources>
